# evm-marketplace-monitoring-service

./: .env.example  Cargo.toml  README.md
migrations/2024-12-29-000000_create_reachability_errors/: down.sql  up.sql
migrations/2025-12-30-053518_operator_endpoint_errors/: down.sql  up.sql
migrations/2026-04-14-081318-0000_sui_operator_errors/: down.sql  up.sql
migrations/2026-04-14-081332-0000_sui_reachability_errors/: down.sql  up.sql
src/: db.rs  main.rs  models.rs  reachability.rs  schema.rs  types.rs
src/abis/: oyster_market_abi.json
