[package]
name = "marketplace-monitoring-service"
version = "0.1.0"
edition = "2024"

[dependencies]
ethers = { version = "2.0", features = ["abigen", "ws"] }
tokio = { version = "1.36", features = ["full"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"
env_logger = "0.11.8"
log = "0.4.29"
reqwest = "0.12.28"
dotenvy = "0.15"
diesel = { version = "2.2", features = ["postgres", "r2d2", "chrono"] }
diesel_migrations = "2.2"
chrono = "0.4"
